# MusicToken

./: .env.example  .gitignore  Concept.md  LICENSE  README.md  conftest.py  pyproject.toml  requirements-pi.txt  requirements.txt
config/: config.yaml
deploy/: install.sh  musictoken-kiosk.service  musictoken.service
hardware/: README.md  chip_top.scad
scripts/: list_chips.py  program_chip.py  suggest_chips.py
src/musictoken/: __init__.py  __main__.py  actions.py  config.py  events.py  printing.py  registry.py
src/musictoken/ai/: __init__.py  anthropic_provider.py  base.py  fallback.py  mock.py  ollama_provider.py  openai_provider.py  suggester.py
src/musictoken/nfc/: __init__.py  base.py  mfrc522_backend.py  mock.py  pn532.py
src/musictoken/players/: __init__.py  base.py  mock.py  spotify_player.py  vlc_player.py
src/musictoken/ui/: __init__.py  app.py
src/musictoken/ui/static/: admin.js  player.js  style.css
src/musictoken/ui/templates/: admin.html  base.html  player.html
tests/: test_actions.py  test_registry.py  test_suggester.py
