[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "musictoken"
version = "0.1.0"
description = "NFC-driven physical music token system"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "Flask>=3.0,<4.0",
    "PyYAML>=6.0,<7.0",
    "spotipy>=2.23,<3.0",
    "requests>=2.31,<3.0",
    "click>=8.1,<9.0",
]

[project.scripts]
musictoken = "musictoken.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
musictoken = ["ui/templates/*.html", "ui/static/**/*"]
